<resources>
    <string name="app_name">emergency</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="phone">phone:</string>
    <string name="age">Age :</string>
    <string name="blood_type">blood_type:</string>
    <string name="e_mail">E-mail:</string>
    <string name="name">Name:</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="selected_item" />
    <string name="b_t">choose your blood type</string>
    <string name="or_search_by_area">OR search by area</string>
    <string name="choose_the_nearest_hospital">choose the nearest hospital</string>
    <string name="go_to_map">go to map</string>
    <string name="enter_your_email">enter your email</string>
    <string name="sign_upbtn">sign up</string>
    <string name="gps">GPS</string>
    <string name="available_beds">Available beds</string>
    <string name="options">Options</string>
    <string name="doctors">Doctors</string>
    <string name="clinics">Clinics</string>
    <string name="blood_bank">blood bank</string>
    <string name="intensive_care_unit">Intensive care unit</string>
    <string name="ambulance">Ambulance</string>
    <string-array name="bloodtype">
        <item>A+</item>
        <item>A-</item>
        <item>B-</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>unknowen</item>


    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>